# daf

./: .gitignore  CHANGELOG.md  README.md  meson.build
.github/workflows/: ci.yml
src/: buffer.c  buffer.h  common.c  common.h  editor.c  editor.h  encoding.c  encoding.h  filetype.c  filetype.h  input.c  input.h  main.c  meson.build  render.c  render.h  search.c  search.h  terminal.c  terminal.h
tests/: meson.build  test_buffer.c  test_clipboard.c  test_editor.c  test_encoding.c  test_filetype.c  test_search.c  test_undo.c
